# demo-target-2021-05

./: README.md  public.pem  pyproject.toml
demo_target_2021_05/: __main__.py  insecurity.py
sql/: schema.sql
tests/: test_demo_target_2021_05.py
